# ir-serde

./: Cargo.toml  README.md
ir-serde/: Cargo.toml
ir-serde-macros/: Cargo.toml
ir-serde-macros/src/: lib.rs
ir-serde/src/: lib.rs
